--- a/package.json
+++ b/package.json
@@ -19,75 +19,74 @@
     "qr": "node scripts/generate_qr.mjs"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^7.8.12",
-    "@react-navigation/elements": "^2.9.2",
-    "@react-navigation/native": "^7.1.25",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/elements": "^1.3.30",
+    "@react-navigation/native": "^6.1.18",
     "@tanstack/react-query": "^5.90.12",
-    "@trpc/client": "11.10.0",
-    "@trpc/react-query": "11.10.0",
-    "@trpc/server": "11.10.0",
+    "@trpc/client": "^11.10.0",
+    "@trpc/react-query": "^11.10.0",
+    "@trpc/server": "^11.10.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.7",
-    "expo": "~54.0.29",
-    "expo-audio": "~1.1.1",
-    "expo-build-properties": "~1.0.10",
-    "expo-clipboard": "~8.0.8",
-    "expo-constants": "~18.0.13",
-    "expo-font": "~14.0.11",
-    "expo-haptics": "~15.0.8",
-    "expo-image": "~3.0.11",
-    "expo-keep-awake": "~15.0.8",
-    "expo-linking": "~8.0.11",
-    "expo-notifications": "~0.32.16",
-    "expo-router": "~6.0.23",
-    "expo-secure-store": "~15.0.8",
-    "expo-splash-screen": "~31.0.13",
-    "expo-status-bar": "~3.0.9",
-    "expo-symbols": "~1.0.8",
-    "expo-system-ui": "~6.0.9",
-    "expo-video": "~3.0.15",
-    "expo-web-browser": "~15.0.10",
+    "expo": "~51.0.39",
+    "expo-asset": "~10.0.10",
+    "expo-build-properties": "~0.12.5",
+    "expo-clipboard": "~6.0.3",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.10",
+    "expo-haptics": "~13.0.1",
+    "expo-image": "~1.13.0",
+    "expo-keep-awake": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.19",
+    "expo-router": "~3.5.24",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.7",
+    "expo-status-bar": "~1.12.1",
+    "expo-symbols": "~0.1.5",
+    "expo-system-ui": "~3.0.7",
+    "expo-video": "~1.2.4",
+    "expo-web-browser": "~13.0.3",
     "express": "^4.22.1",
     "jose": "6.1.0",
     "mysql2": "^3.16.0",
-    "nativewind": "^4.2.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
-    "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10",
     "superjson": "^1.13.3",
     "tailwind-merge": "^2.6.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@types/cookie": "^0.6.0",
     "@types/express": "^4.17.25",
     "@types/node": "^22.19.3",
     "@types/qrcode": "^1.5.6",
-    "@types/react": "~19.1.17",
+    "@types/react": "~18.2.79",
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.31.8",
+    "drizzle-kit": "^0.18.1",
     "esbuild": "^0.25.12",
     "eslint": "^9.39.2",
-    "eslint-config-expo": "~10.0.0",
+    "eslint-config-expo": "~7.1.2",
     "prettier": "^3.7.4",
     "qrcode": "^1.5.4",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.21.0",
-    "typescript": "~5.9.3",
-    "vitest": "^2.1.9"
+    "typescript": "~5.3.3",
+    "vitest": "^4.0.18"
   },
   "packageManager": "pnpm@9.12.0"
 }
