--- a/package.json
+++ b/package.json
@@ -29,15 +29,19 @@
     "@trpc/react-query": "^11.10.0",
     "@trpc/server": "^11.10.0",
     "axios": "^1.13.2",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "cookie": "^1.1.1",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.7",
+    "esbuild": "^0.27.3",
     "expo": "~51.0.39",
     "expo-asset": "~10.0.10",
+    "expo-auth-session": "~5.5.2",
     "expo-build-properties": "~0.12.5",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.10",
     "expo-haptics": "~13.0.1",
     "expo-image": "~1.13.0",
@@ -54,8 +58,10 @@
     "expo-web-browser": "~13.0.3",
     "express": "^4.22.1",
     "jose": "6.1.0",
+    "mongoose": "^8.9.0",
     "mysql2": "^3.16.0",
     "nativewind": "2.0.11",
+    "nodemailer": "^6.9.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -67,26 +73,20 @@
     "react-native-web": "~0.19.10",
     "superjson": "^1.13.3",
     "tailwind-merge": "^2.6.0",
-    "zod": "^4.2.1",
-    "mongoose": "^8.9.0",
-    "bcryptjs": "^2.4.3",
-    "nodemailer": "^6.9.16",
-    "expo-auth-session": "~5.5.2",
-    "expo-crypto": "~13.0.2"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/express": "^4.17.25",
     "@types/node": "^22.19.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.6",
     "@types/react": "~18.2.79",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/nodemailer": "^6.4.17",
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.18.1",
-    "esbuild": "^0.25.12",
     "eslint": "^9.39.2",
     "eslint-config-expo": "~7.1.2",
     "prettier": "^3.7.4",
